fix(header): adjust gap value for mobile view in header styles

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -9,7 +9,7 @@
 
   @media (width <= 640px) {
     margin-bottom: 18rem;
-    gap: 12.4rem;
+    gap: 12rem;
   }
 
   @media (width <= 400px) {
